--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,9 @@ iniconfig==2.0.0
 packaging==23.2
 pluggy==1.4.0
 pytest==8.0.1
+pytest-django==4.7.0
+pytest-factoryboy==2.6.0
+pytest-mock==3.12.0
 python-dateutil==2.8.2
 python-decouple==3.8
 pytz==2024.1
