--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,9 @@ services:
       - .:/registrafirma
     ports:
       - "8000:8000"
+    environment:
+      - CELERY_BROKER:redis://redis:6379/0
+      - CELERY_BACKEND:redis://redis:6379/0
     depends_on:
       - redis
 
