--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ cron-descriptor==1.4.3
 dj-database-url==2.1.0
 Django==4.2.10
 django-celery-beat==2.5.0
+django-redis==5.4.0
 django-timezone-field==6.1.0
 djangorestframework==3.14.0
 factory-boy==3.3.0
